--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Installation:
 https://sites.google.com/site/3dreconstructionusingkinect/project-updates/Installation-of-RGB-demo-07-on-Ubuntu-1204
 
-
+Kinect documentation: http://kinectcar.ronsper.com/docs/openni/index.html
 ###############kinect installation######################################################################################################
  Demonstration of RGB Demo0.7 on UBuntu12.04
 posted Oct 19, 2009, 9:46 PM by aishwarya kotla   [ updated Dec 22, 2014, 8:17 AM ]
